Created component to view sales statistics. 1-column-chart

--- a/04-oop-basic-intro-to-dom/1-column-chart/index.html
+++ b/04-oop-basic-intro-to-dom/1-column-chart/index.html
@@ -40,6 +40,10 @@
         value: 321
       });
 
+      const orders = document.getElementById('orders');
+      const sales = document.getElementById('sales');
+      const customers = document.getElementById('customers');
+
       orders.append(ordersChart.element);
       sales.append(salesChart.element);
       customers.append(customersChart.element);
