Added sortable table class. 2-sortable-table-v1

--- a/05-dom-document-loading/2-sortable-table-v1/index.html
+++ b/05-dom-document-loading/2-sortable-table-v1/index.html
@@ -71,6 +71,11 @@
 
   const sortableTable = new SortableTable(headerConfig, data);
 
+  const root = document.getElementById('root');
+  const sort = document.getElementById('sort');
+  const field = document.getElementById('field');
+  const order = document.getElementById('order');
+
   root.append(sortableTable.element);
 
   sort.addEventListener('click', () => {
